# game_project_tech_mentoring

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: api.py  api_config.py  api_keys_config.py  app_config.py  fast_api_endpoints.py  logging_config.py  main.py  meme_generator.py  models.py  rawg_api.py  test.http  utils.py
app/db/: db_config.py  db_models.py  db_utils.py  engine.py
app/tests/: conftest.py  test.http  test_generate_game_meme.py  test_mock_utilis.py  test_rawg_api.py  test_utils.py
