[project]
name = "game-project-tech-mentoring"
version = "0.1.0"
description = "will see what this will be lol"
authors = [
    { name = "Agnieszka", email = "145929660+AguxKuroko@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn[standard] (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "openai (>=2.28.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 160


[tool.ruff.lint]
select = ["E", "F", "B", "N", "UP", "I"]
ignore = ["B008"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pre-commit = "^3.7"
ruff = "^0.15.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
